update: removed unnecessary GoogleAnayltics component import into _app.tsx

--- a/pages/posts/hackthebox-thenotebook.mdx
+++ b/pages/posts/hackthebox-thenotebook.mdx
@@ -8,9 +8,7 @@ export const meta = {
 
 # HackTheBox: The Notebook | Writeup
 
-<small>July 17th 2021 </small>
-
-Medium (5/10 Avg)
+<small>July 17th 2021 </small>e Medium (5/10 Avg)
 
 ## Initial Scan:
 
